# deep_eval_poc

./: .env.example  .env.sample  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
migration_pilot/: README.md  __init__.py  comparison.py  data_adapter.py  deepeval_metrics.py  run_pilot.py
playground/: README.md  __init__.py  single_turn_example.py
playground/data/: sample_test_cases.json
src/: constants.py  deepeval_introduction.py
